mcfootball-generator/src/test/resources/football/valid/MixedUnicode.fb
/* Mixed-language Unicode stress test:
 *   German:     Mönchengladbach, Köln
 *   Spanish:    Atlético Madrid
 *   French:     Saint-Étienne
 *   Portuguese: São Paulo, Estádio da Luz
 *   Country and league names use extended Name token (Österreich, Süperlig).
 */
footballsite UnicodeStress {

  navigation { Österreich; }

  country Österreich {
    league Süperlig season "2025-2026" {
      match {
        date    "2025-09-01"
        time    "15:00"
        home    "Borussia Mönchengladbach"   ("Mönchengladbach")
        away    "Atlético Madrid"            ("Madrid")
        score   2 - 1
        stadium "Stade Saint-Étienne"
      }
      match {
        date    "2025-09-08"
        time    "18:00"
        home    "São Paulo FC"               ("São Paulo")
        away    "1. FC Köln"                 ("Köln")
        score   0 - 0
        stadium "Estádio da Luz"
      }
    }
  }

}
