mcfootball-generator/src/test/resources/football/invalid/BlankCity.fb
/* Invalid — triggers 0xFC023: home city is whitespace-only (blank). */
footballsite BlankCityTest {

  navigation { Testland; }

  country Testland {
    league TestLeague season "2025-2026" {
      match {
        date    "2025-09-01"
        time    "15:00"
        home    "Team Alpha"   (" ")
        away    "Team Beta"    ("CityB")
        score   1 - 0
        stadium "Test Arena"
      }
    }
  }

}
